--- a/what_is_digital_literacy.html
+++ b/what_is_digital_literacy.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1.0">
     <title>What is Digital Literacy? - Jonathan Horn's 4-H Digital Literacy Project</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen and (max-device-width: 480px)" href="stylesheet.css"/>
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 481px)" href="stylesheet.css"/>
 </head>
 <body>
 
