--- a/topics.html
+++ b/topics.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
-    <title>Topics - Jonathan Horn's 4-H Digital Literacy Project</title>
+    <title>Topics | Jonathan Horn's 4-H Digital Literacy Project</title>
     <link rel="stylesheet" type="text/css" media="screen and (max-device-width: 480px)" href="stylesheet.css"/>
     <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 481px)" href="stylesheet.css"/>
 </head>
