--- a/the_internet_of_things.html
+++ b/the_internet_of_things.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Internet of Things - Jonathan Horn's 4-H Digital Literacy Project</title>
+    <title>The Internet of Things | Jonathan Horn's 4-H Digital Literacy Project</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
