--- a/the_digital_world_today.html
+++ b/the_digital_world_today.html
@@ -17,7 +17,11 @@
 
 <h2>The Digital World Today</h2>
 
-<p class="paragraph_text_centered_full_page">The digital landscape is becoming more complex and interconnected than ever before. People, businesses and organizations use a lot different digital tools to perform a variety of functions. Some of the few areas radically changed by the digital revolution are education, shopping, job seeking, banking, and entertainment.</p>
+<div class="paragraph_text_centered_full_page">
+
+</div>
+
+<p>The digital landscape is becoming more complex and interconnected than ever before. People, businesses and organizations use a lot different digital tools to perform a variety of functions. Some of the few areas radically changed by the digital revolution are education, shopping, job seeking, banking, and entertainment.</p>
 
 <a href="topics.html" class="button">Back</a>
 
