--- a/what_is_a_digital_profile.html
+++ b/what_is_a_digital_profile.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>What is a Digital Profile? - Jonathan Horn's 4-H Digital Literacy Project</title>
+    <title>What is a Digital Profile? | Jonathan Horn's 4-H Digital Literacy Project</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
-<h1>Jonathan Horn's 4-H Digital Literacy Project</h1>
+<h1>Jonathan Horn's 4-H Digital Literacy Projec|t</h1>
 
 <ul>
     <li><a href="index.html">Home</a></li>
