--- a/what_is_a_digital_profile.html
+++ b/what_is_a_digital_profile.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1>Jonathan Horn's 4-H Digital Literacy Projec|t</h1>
+<h1>Jonathan Horn's 4-H Digital Literacy Project</h1>
 
 <ul>
     <li><a href="index.html">Home</a></li>
