--- a/finding_and_evaluating_information.html
+++ b/finding_and_evaluating_information.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Finding & Evaluating Information - Jonathan Horn's 4-H Digital Literacy Project</title>
+    <title>Finding & Evaluating Information | Jonathan Horn's 4-H Digital Literacy Project</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
