--- a/what_is_digital_divide.html
+++ b/what_is_digital_divide.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>What is Digital Divide? - Jonathan Horn's 4-H Digital Literacy Project</title>
+    <title>What is Digital Divide? | Jonathan Horn's 4-H Digital Literacy Project</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
