--- a/open_source.html
+++ b/open_source.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Open Source - Jonathan Horn's 4-H Digital Literacy Project</title>
+    <title>Open Source | Jonathan Horn's 4-H Digital Literacy Project</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
