--- a/the_nine_elements_of_digital_citizenship.html
+++ b/the_nine_elements_of_digital_citizenship.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Nine Elements of Digital Citizenship - Jonathan Horn's 4-H Digital Literacy Project</title>
+    <title>The Nine Elements of Digital Citizenship | Jonathan Horn's 4-H Digital Literacy Project</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
