--- a/topics.html
+++ b/topics.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>Topics | Jonathan Horn's 4-H Digital Literacy Project</title>
-    <link rel="stylesheet" type="text/css" media="screen and (max-device-width: 480px)" href="stylesheet.css"/>
-    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 481px)" href="stylesheet.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
@@ -31,7 +30,6 @@
 <p><a href="open_source.html" class="paragraph">Open Source</a></p>
 <p><a href="what_is_cyber_security.html" class="paragraph">What is Cyber Security?</a></p>
 <p><a href="the_nine_elements_of_digital_citizenship.html" class="paragraph">The Nine Elements of Digital Citizenship</a></p>
-
 
 </body>
 </html>
