--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>Home | Jonathan Horn's 4-H Digital Literacy Project</title>
-    <link rel="stylesheet" type="text/css" media="screen and (max-device-width: 480px)" href="stylesheet.css"/>
-    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 481px)" href="stylesheet.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
@@ -17,12 +16,9 @@
     <li><a href="works_cited.html">Works Cited</a></li>
 </ul>
 
-<div class="paragraph_text_centered_full_page">
-    <h2>Welcome to my Website</h2>
-    <p>This website was created by Jonathan Horn as a Minnesota West Digital Literacy Class Final Project. This website includes all of the topics learned in Digital Literacy Class, information about these topics, and some examples of these topics in the real world.</p>
-</div>
+<h2>Welcome to my Website</h2>
 
-
+<p>This website was created by Jonathan Horn as a Minnesota West Digital Literacy Class Final Project. This website includes all of the topics learned in Digital Literacy Class, information about these topics, and some examples of these topics in the real world.</p>
 
 
 </body>
