--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p>This website was created by Jonathan Horn as a Minnesota West Digital Literacy Class Final Project. This website includes all of the topics learned in Digital Literacy Class, information about these topics, and some examples of these topics in the real world.</p>
 
 <video width="320" height="240" controls>
-  <source src="http://srv81.clipconverter.cc/download/x6jXkJh31oiwZm9rnpeUaWlj5KWmqXFp4pSXcXJkoGttZ2m0qc%2FMqHyf1qiZpa2d2A%3D%3D/STUCK%20IN%20THE%20STORM%21%21%20No%20Power%21%21.mp4" type="video/mp4">
+  <source src="STUCK IN THE STORM!! No Power!!.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
     
