--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>Home | Jonathan Horn's 4-H Digital Literacy Project</title>
-
+    <link rel="stylesheet" type="text/css" href="jhorn1992.github.io/jonathanhorncss/stylesheet.css">
 </head>
 <body>
 
