--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <h2>Welcome to my Website</h2>
 
-<p>This website was created by Jonathan Horn as a Minnesota West Digital Literacy Class Final Project. This website includes all of the topics learned in Digital Literacy Class, information about these topics, and some examples of these topics in the real world.</p>
+<p>This website was created by Jonathan Horn as a 4H Project. This website includes topics about Digital Literacy Class, information about these topics, and some examples of these topics in the real world.</p>
     
     
 </body>
