--- a/topics.html
+++ b/topics.html
@@ -25,7 +25,7 @@
 <p><a href="popular_platforms_and_social_media.html" class="paragraph">Popular Platforms & Social Media Tools</a></p>
 <p><a href="what_is_a_digital_profile.html" class="paragraph">What is a Digital Profile?</a></p>
 <p><a href="your_digital_footprint_matters.html" class="paragraph">Your Digital Footprint Matters</a></p>
-<p><a href="finding_and_evaluating_information.html" class="paragraph">Finding & Evaluating Information</a></p>
+<p><a href="finding_and_evaluating_information.html" class="paragraph">Finding Evaluating Information</a></p>
 <p><a href="what_is_digital_divide.html" class="paragraph">What is Digital Divide?</a></p>
 <p><a href="open_source.html" class="paragraph">Open Source</a></p>
 <p><a href="what_is_cyber_security.html" class="paragraph">What is Cyber Security?</a></p>
