--- a/topics.html
+++ b/topics.html
@@ -22,7 +22,7 @@
 <p><a href="the_digital_world_today.html" class="paragraph">The Digital World Today</a></p>
 <p><a href="what_is_the_internet.html" class="paragraph">What is the Internet?</a></p>
 <p><a href="the_internet_of_things.html" class="paragraph">The Internet of Things</a></p>
-<p><a href="popular_platforms_and_social_media.html" class="paragraph">Popular Platforms & Social Media Tools</a></p>
+<p><a href="popular_platforms_and_social_media.html" class="paragraph">Popular Platforms &amp; Social Media Tools</a></p>
 <p><a href="what_is_a_digital_profile.html" class="paragraph">What is a Digital Profile?</a></p>
 <p><a href="your_digital_footprint_matters.html" class="paragraph">Your Digital Footprint Matters</a></p>
 <p><a href="finding_and_evaluating_information.html" class="paragraph">Finding &amp; Evaluating Information</a></p>
