Update and rename popular_platforms_and_social_media.html to popular_platforms_and_social_media_tools.html

--- a/popular_platforms_and_social_media_tools.html
+++ b/popular_platforms_and_social_media_tools.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
-    <title>Popular Platforms & Social Media | Jonathan Horn's 4-H Digital Literacy Project</title>
+    <title>Popular Platforms & Social Media Tools | Jonathan Horn's 4-H Digital Literacy Project</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <li><a href="works_cited.html">Works Cited</a></li>
 </ul>
 
-<h2>Popular Platforms & Social Media</h2>
+<h2>Popular Platforms &amp; Social Media Tools</h2>
 
 <p>Facebook, YouTube, Twitter, LinkedIn, Google+, Tumblr, Skype, Reddit, and many more, are various tools that are used for entertainment, communicating with others, conducting business and other activities.</p>
 
