--- a/popular_platforms_and_social_media_tools.html
+++ b/popular_platforms_and_social_media_tools.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
-    <title>Popular Platforms & Social Media Tools | Jonathan Horn's 4-H Digital Literacy Project</title>
+    <title>Popular Platforms &amp; Social Media Tools | Jonathan Horn's 4-H Digital Literacy Project</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
