--- a/finding_and_evaluating_information.html
+++ b/finding_and_evaluating_information.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
-    <title>Finding & Evaluating Information | Jonathan Horn's 4-H Digital Literacy Project</title>
+    <title>Finding &amp; Evaluating Information | Jonathan Horn's 4-H Digital Literacy Project</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <li><a href="works_cited.html">Works Cited</a></li>
 </ul>
 
-<h2>Finding & Evaluating Information</h2>
+<h2>Finding &amp; Evaluating Information</h2>
 
 <p>To find information online, you can use a search engine or database. Sometimes you will come across information or websites that have invalid information. Below are a few suggestions on how to evaluate the accuracy of a website:</p>
 
