--- a/the_digital_world_today.html
+++ b/the_digital_world_today.html
@@ -12,7 +12,7 @@
 
 <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="topics.html">Topics</a></li>
+    <li><a class="active" href="topics.html">Topics</a></li>
     <li><a href="works_cited.html">Works Cited</a></li>
 </ul>
 
