--- a/topics.html
+++ b/topics.html
@@ -18,18 +18,18 @@
 
 <h2>Digital Literacy Topics discussed on this Website</h2>
 
-<p><a href="what_is_digital_literacy.html" class="paragraph">What is Digital Literacy?</a></p>
-<p><a href="the_digital_world_today.html" class="paragraph">The Digital World Today</a></p>
-<p><a href="what_is_the_internet.html" class="paragraph">What is the Internet?</a></p>
-<p><a href="the_internet_of_things.html" class="paragraph">The Internet of Things</a></p>
-<p><a href="popular_platforms_and_social_media_tools.html" class="paragraph">Popular Platforms &amp; Social Media Tools</a></p>
-<p><a href="what_is_a_digital_profile.html" class="paragraph">What is a Digital Profile?</a></p>
-<p><a href="your_digital_footprint_matters.html" class="paragraph">Your Digital Footprint Matters</a></p>
-<p><a href="finding_and_evaluating_information.html" class="paragraph">Finding &amp; Evaluating Information</a></p>
-<p><a href="what_is_digital_divide.html" class="paragraph">What is Digital Divide?</a></p>
-<p><a href="open_source.html" class="paragraph">Open Source</a></p>
-<p><a href="what_is_cyber_security.html" class="paragraph">What is Cyber Security?</a></p>
-<p><a href="the_nine_elements_of_digital_citizenship.html" class="paragraph">The Nine Elements of Digital Citizenship</a></p>
+<p><a href="topics/what_is_digital_literacy.html" class="paragraph">What is Digital Literacy?</a></p>
+<p><a href="topics/the_digital_world_today.html" class="paragraph">The Digital World Today</a></p>
+<p><a href="topics/what_is_the_internet.html" class="paragraph">What is the Internet?</a></p>
+<p><a href="topics/the_internet_of_things.html" class="paragraph">The Internet of Things</a></p>
+<p><a href="topics/popular_platforms_and_social_media_tools.html" class="paragraph">Popular Platforms &amp; Social Media Tools</a></p>
+<p><a href="topics/what_is_a_digital_profile.html" class="paragraph">What is a Digital Profile?</a></p>
+<p><a href="topics/your_digital_footprint_matters.html" class="paragraph">Your Digital Footprint Matters</a></p>
+<p><a href="topics/finding_and_evaluating_information.html" class="paragraph">Finding &amp; Evaluating Information</a></p>
+<p><a href="topics/what_is_digital_divide.html" class="paragraph">What is Digital Divide?</a></p>
+<p><a href="topics/open_source.html" class="paragraph">Open Source</a></p>
+<p><a href="topics/what_is_cyber_security.html" class="paragraph">What is Cyber Security?</a></p>
+<p><a href="topics/the_nine_elements_of_digital_citizenship.html" class="paragraph">The Nine Elements of Digital Citizenship</a></p>
 
 </body>
 </html>
