--- a/topics/what_is_digital_literacy.html
+++ b/topics/what_is_digital_literacy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>What is Digital Literacy? | Jonathan Horn's 4-H Digital Literacy Project</title>
-    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/jonathanhorn4hdigitalliteracyprojectwebsite/stylesheet.css">
 </head>
 <body>
 
