--- a/topics/what_is_digital_literacy.html
+++ b/topics/what_is_digital_literacy.html
@@ -11,16 +11,16 @@
 <h1>Jonathan Horn's 4-H Digital Literacy Project</h1>
 
 <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a class="active" href="topics.html">Topics</a></li>
-    <li><a href="works_cited.html">Works Cited</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/index.html">Home</a></li>
+    <li><a class="active" href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html">Topics</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/works_cited.html">Works Cited</a></li>
 </ul>
 
 <h2>What is Digital Literacy?</h2>
 
 <p>Digital Literacy is the ability to find, evaluate, share, and create content using information technologies and the Internet.</p>
 
-<a href="topics.html" class="button">Back</a>
+<a href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html" class="button">Back</a>
 
 </body>
 </html>
