--- a/topics/what_is_the_internet.html
+++ b/topics/what_is_the_internet.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>What is the Internet? | Jonathan Horn's 4-H Digital Literacy Project</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/jonathanhorn4hdigitalliteracyprojectwebsite/stylesheet.css">
 </head>
 <body>
 
 <h1>Jonathan Horn's 4-H Digital Literacy Project</h1>
 
 <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a class="active" href="topics.html">Topics</a></li>
-    <li><a href="works_cited.html">Works Cited</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/index.html">Home</a></li>
+    <li><a class="active" href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html">Topics</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/works_cited.html">Works Cited</a></li>
 </ul>
 
 <h2>What is the Internet?</h2>
@@ -24,7 +24,7 @@
 
 <p>The internet is a network of computer networks worldwide, in which billions of computers users can send and receive digital information.</p>
 
-<a href="topics.html" class="button">Back</a>
+<a href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html" class="button">Back</a>
 
 </body>
 </html>
