--- a/topics/the_internet_of_things.html
+++ b/topics/the_internet_of_things.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>The Internet of Things | Jonathan Horn's 4-H Digital Literacy Project</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/jonathanhorn4hdigitalliteracyprojectwebsite/stylesheet.css">
 </head>
 <body>
 
 <h1>Jonathan Horn's 4-H Digital Literacy Project</h1>
 
 <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a class="active" href="topics.html">Topics</a></li>
-    <li><a href="works_cited.html">Works Cited</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/index.html">Home</a></li>
+    <li><a class="active" href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html">Topics</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/works_cited.html">Works Cited</a></li>
 </ul>
 
 <h2>The Internet of Things</h2>
@@ -22,11 +22,11 @@
 
 <p>Some examples of Internet of Things are smart thermostats, Philips-Hue Bulbs, Apple Watch and HomeKit, Smart Refridgerator, Smart Phones, Smart Cars, and Google Glass.</p>
 
-<img src="network-782707_1_orig.png">
+<img src="/jonathanhorn4hdigitalliteracyprojectwebsite/network-782707_1_orig.png">
 
 <p> </p>
 
-<a href="topics.html" class="button">Back</a>
+<a href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html" class="button">Back</a>
 
 </body>
 </html>
