--- a/topics/popular_platforms_and_social_media_tools.html
+++ b/topics/popular_platforms_and_social_media_tools.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>Popular Platforms &amp; Social Media Tools | Jonathan Horn's 4-H Digital Literacy Project</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/jonathanhorn4hdigitalliteracyprojectwebsite/stylesheet.css">
 </head>
 <body>
 
 <h1>Jonathan Horn's 4-H Digital Literacy Project</h1>
 
 <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a class="active" href="topics.html">Topics</a></li>
-    <li><a href="works_cited.html">Works Cited</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/index.html">Home</a></li>
+    <li><a class="active" href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html">Topics</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/works_cited.html">Works Cited</a></li>
 </ul>
 
 <h2>Popular Platforms &amp; Social Media Tools</h2>
@@ -22,11 +22,11 @@
 
 <p>The most popular social media site right now is Facebook, and Twitter is the second most popular social media site.</p>
 
-<img src="8464661409-4efdfbeae4-o_1_orig.jpg">
+<img src="/jonathanhorn4hdigitalliteracyprojectwebsite/8464661409-4efdfbeae4-o_1_orig.jpg">
 
 <p> </p>
 
-<a href="topics.html" class="button">Back</a>
+<a href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html" class="button">Back</a>
 
 </body>
 </html>
