--- a/topics/what_is_cyber_security.html
+++ b/topics/what_is_cyber_security.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>What is Cyber Security? | Jonathan Horn's 4-H Digital Literacy Project</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/jonathanhorn4hdigitalliteracyprojectwebsite/stylesheet.css">
 </head>
 <body>
 
 <h1>Jonathan Horn's 4-H Digital Literacy Project</h1>
 
 <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="topics.html">Topics</a></li>
-    <li><a href="works_cited.html">Works Cited</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/index.html">Home</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html">Topics</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/works_cited.html">Works Cited</a></li>
 </ul>
 
 <h2>What is Cyber Security?</h2>
@@ -24,11 +24,11 @@
 
 <p>Some examples of Cybersecurity are getting your computer locked down by malicious software, people hacking into your email, and people taking control of a car remotely by hacking.</p>
 
-<img src="16203259800-2fe4c0de5c-o_1_orig.jpg">
+<img src="/jonathanhorn4hdigitalliteracyprojectwebsite/16203259800-2fe4c0de5c-o_1_orig.jpg">
 
 <p> </p>
 
-<a href="topics.html" class="button">Back</a>
+<a href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html" class="button">Back</a>
 
 </body>
 </html>
