--- a/topics/the_nine_elements_of_digital_citizenship.html
+++ b/topics/the_nine_elements_of_digital_citizenship.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>The Nine Elements of Digital Citizenship | Jonathan Horn's 4-H Digital Literacy Project</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/jonathanhorn4hdigitalliteracyprojectwebsite/stylesheet.css">
 </head>
 <body>
 
 <h1>Jonathan Horn's 4-H Digital Literacy Project</h1>
 
 <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="topics.html">Topics</a></li>
-    <li><a href="works_cited.html">Works Cited</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/index.html">Home</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html">Topics</a></li>
+    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/works_cited.html">Works Cited</a></li>
 </ul>
 
 <h2>The Nine Elements of Digital Citizenship</h2>
@@ -36,7 +36,7 @@
 
 <p>9. Digital Security (self-protection) - electronic precautions to guarantee safety</p>
 
-<a href="topics.html" class="button">Back</a>
+<a href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html" class="button">Back</a>
 
 </body>
 </html>
