Update and rename works_cited.html to works-cited.html

--- a/works-cited.html
+++ b/works-cited.html
@@ -13,7 +13,7 @@
 <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="topics.html">Topics</a></li>
-    <li><a class="active" href="works_cited.html">Works Cited</a></li>
+    <li><a class="active" href="works-cited.html">Works Cited</a></li>
 </ul>
 
 <div class="paragraph_text_centered_full_page">
