--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <ul>
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="topics.html">Topics</a></li>
-    <li><a href="works_cited.html">Works Cited</a></li>
+    <li><a href="works-cited.html">Works Cited</a></li>
 </ul>
 
 <h2>Welcome to my Website</h2>
