--- a/topics.html
+++ b/topics.html
@@ -13,7 +13,7 @@
 <ul>
     <li><a href="index.html">Home</a></li>
     <li><a class="active" href="topics.html">Topics</a></li>
-    <li><a href="works_cited.html">Works Cited</a></li>
+    <li><a href="works-cited.html">Works Cited</a></li>
 </ul>
 
 <h2>Digital Literacy Topics discussed on this Website</h2>
