--- a/topics/finding-and-evaluating-information.html
+++ b/topics/finding-and-evaluating-information.html
@@ -12,7 +12,7 @@
 
 <ul>
     <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/index.html">Home</a></li>
-    <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html">Topics</a></li>
+    <li><a class="active" href="/jonathanhorn4hdigitalliteracyprojectwebsite/topics.html">Topics</a></li>
     <li><a href="/jonathanhorn4hdigitalliteracyprojectwebsite/works-cited.html">Works Cited</a></li>
 </ul>
 
